test/files/neg/sammy_wrong_arity.check
sammy_wrong_arity.scala:6: error: type mismatch;
 found   : () => Int
 required: T1
  def f0 = (() => 0): T1
               ^
sammy_wrong_arity.scala:7: error: type mismatch;
 found   : Any => Int
 required: T2
  def f1 = ((x: Any) => 0): T2
                     ^
sammy_wrong_arity.scala:9: error: type mismatch;
 found   : Any => Int
 required: T0
  def f2 = ((x: Any) => 0): T0
                     ^
sammy_wrong_arity.scala:10: error: type mismatch;
 found   : Any => Int
 required: T2
  def f3 = ((x: Any) => 0): T2
                     ^
sammy_wrong_arity.scala:12: error: type mismatch;
 found   : (Any, Any) => Int
 required: T0
  def f4 = ((x: Any, y: Any) => 0): T0
                             ^
sammy_wrong_arity.scala:13: error: type mismatch;
 found   : (Any, Any) => Int
 required: T1
  def f5 = ((x: Any, y: Any) => 0): T1
                             ^
sammy_wrong_arity.scala:15: error: missing parameter type
  def f6 = ((x) => 0): T2
             ^
sammy_wrong_arity.scala:17: error: missing parameter type
  def f7 = ((x) => 0): T0
             ^
sammy_wrong_arity.scala:18: error: missing parameter type
  def f8 = ((x) => 0): T2
             ^
sammy_wrong_arity.scala:20: error: missing parameter type
  def f9 = ((x, y) => 0): T0
             ^
sammy_wrong_arity.scala:20: error: missing parameter type
  def f9 = ((x, y) => 0): T0
                ^
sammy_wrong_arity.scala:21: error: missing parameter type
  def g0 = ((x, y) => 0): T1
             ^
sammy_wrong_arity.scala:21: error: missing parameter type
  def g0 = ((x, y) => 0): T1
                ^
13 errors found
